--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,8 +81,11 @@ defaults: &defaults
          . ci/bin/activate
          ls -la /bin | grep mongo
          which mongod
+         #py.test not found
          #py.test -svvvvv --junitxml=test-results/junit.xml
-         python -m test
+         # runs python tests
+         #python -m test
+         python setup.py test --pytest-args=-v
     - store_test_results:
         path: test-results
     # Save artifacts
