--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,9 @@ defaults: &defaults
          #py.test -svvvvv --junitxml=test-results/junit.xml
          # runs python tests
          #python -m test
-         python setup.py test --pytest-args=-v
+         # deprecated but works
+         #python setup.py test --pytest-args=-v
+         pytest -svvvvv --junitxml=test-results/junit.xml
     - store_test_results:
         path: test-results
     # Save artifacts
