--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,11 +83,8 @@ defaults: &defaults
          . ci/bin/activate
          ls -la /bin | grep mongo
          which mongod
-         # both not found
+         # this is correct method pytest also valid
          py.test -svvvvv --junitxml=test-results/junit.xml
-         echo try pytest
-         pytest
-         #pytest -svvvvv --junitxml=test-results/junit.xml
          # deprecated but works does save results
          #python setup.py test --pytest-args=-v
     - store_test_results:
