test no versions for pandas and pymongo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,12 +50,10 @@ defaults: &defaults
        command: |
          virtualenv ci
          . ci/bin/activate
-         echo "run setup.py develop"
          python setup.py develop
-         echo "manual install pytest-server-fixtures"
          pip install pytest-server-fixtures[mongodb]
-         echo "pip freeze"
          pip freeze
+         python --version
     # Save dependency cache
     - save_cache:
         key: v1-dep-{{ .Branch }}-{{ epoch }}
