--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,9 +55,13 @@ defaults: &defaults
     - run:
        name: Check MarkDown rendering
        command: |
+         pip install --upgrade pip
          pip install readme_renderer
+         echo CHANGES.md
          python -m readme_renderer CHANGES.md  -o c.html
+         echo README.md
          python -m readme_renderer README.md  -o r.html
+         echo setup.py
          python -m readme_renderer setup.py  -o s.html
     # Save dependency cache
     - save_cache:
