call python setup.py

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,8 @@ defaults: &defaults
          . ci/bin/activate
          ls -la /bin | grep mongo
          which mongod
-         py.test -svvvvv --junitxml=test-results/junit.xml
+         #py.test -svvvvv --junitxml=test-results/junit.xml
+         python setup.py test --pytest-args=-v
     - store_test_results:
         path: test-results
     # Save artifacts
