remove junit from cmdline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ defaults: &defaults
          ls -la /bin | grep mongo
          which mongod
          #py.test -svvvvv --junitxml=test-results/junit.xml
-         python setup.py test --pytest-args=-v --pytest-args=--junitxml=test-results/junit.xml
+         python setup.py test --pytest-args=-v
     - store_test_results:
         path: test-results
     # Save artifacts
