--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,19 +109,6 @@ defaults: &defaults
           - ./*/dist/*
 version: 2
 jobs:
-  build_2_7:
-    environment:
-      PYTHON_VERSION: "2_7"
-      CIRCLE_ARTIFACTS: /tmp/circleci-artifacts/2_7
-      CIRCLE_TEST_REPORTS: /tmp/circleci-test-results/2_7
-      VERSION: $VERSION
-      #PANDOC_RELEASES_URL: https://github.com/jgm/pandoc/releases
-      #YARN_STATIC_DIR: notebooker/web/static/
-      IMAGE_NAME: mangroup/arctic
-    working_directory: ~/arctic_2_7
-    docker:
-    - image: cimg/python:2.7-node
-    <<: *defaults
   build_3_6:
     environment:
       PYTHON_VERSION: "3_6"
@@ -148,6 +135,19 @@ jobs:
     docker:
     - image: cimg/python:3.7-node
     <<: *defaults
+  build_3_8:
+    environment:
+      PYTHON_VERSION: "3_8"
+      CIRCLE_ARTIFACTS: /tmp/circleci-artifacts/3_8
+      CIRCLE_TEST_REPORTS: /tmp/circleci-test-results/3_8
+      VERSION: $VERSION
+      #PANDOC_RELEASES_URL: https://github.com/jgm/pandoc/releases
+      #YARN_STATIC_DIR: notebooker/web/static/
+      IMAGE_NAME: mangroup/arctic
+    working_directory: ~/arctic_3_8
+    docker:
+    - image: cimg/python:3.8-node
+    <<: *defaults
   publish-github-release:
    docker:
      - image: cibuilds/github:0.13
@@ -171,8 +171,9 @@ workflows:
   version: 2
   build_all:
     jobs:
-      - build_3_6
-      - build_3_7
+      #- build_3_6
+      #- build_3_7
+      - build_3_8
 
       # do not publish
       #- publish-github-release:
