--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,8 +171,8 @@ workflows:
   version: 2
   build_all:
     jobs:
-      #- build_3_6
-      #- build_3_7
+      - build_3_6
+      - build_3_7
       - build_3_8
 
       # do not publish
