--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version=1.80.5
 author=Man AHL Technology
 author_email=ahl.de@man.com
 maintainer_email=ahl.de@man.com
-description=AHL Research Versioned TimeSeries and Tick store
+description=Man AHL Versioned TimeSeries and TickStore
 license=GPL
 keywords=ahl, keyvalue, tickstore, mongo, timeseries
 url=https://github.com/man-group/arctic
