test [options] on jenkins build

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,9 +8,9 @@ description=Man AHL Versioned TimeSeries and TickStore
 license=GPL
 keywords=ahl, keyvalue, tickstore, mongo, timeseries
 url=https://github.com/man-group/arctic
-long_description_content_type=text/markdown
-cmdclass={test: PyTest}
-classifiers = 
+#long_description_content_type=text/markdown
+#cmdclass={test: PyTest}
+classifiers =
     Development Status :: 5 - Production/Stable
     License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
     Programming Language :: Python :: 3.6
@@ -24,21 +24,6 @@ classifiers =
     Topic :: Database :: Front-Ends
     Topic :: Software Development :: Libraries
 
-[options]
-zip_safe = False
-include_package_data = True
-packages = find:
-install_requires =
-    decorator
-    enum-compat
-    mock
-    mockextras
-    pandas<=1.0.3
-    numpy<=1.18.4
-    pymongo>=3.6.0, <= 3.11.0
-    pytz
-    tzlocal
-    lz4
 
 tests_require =
     mock
@@ -50,11 +35,11 @@ tests_require =
     pytest-xdist<=1.26.1
     tomli<2; python_version=='3.6'
     lz4
-    
+
 setup_requires =
     numpy<=1.18.4
     setuptools-git
-    
+
 [options.packages.find]
 exclude = tests, tests.*, benchmarks
 
@@ -69,6 +54,23 @@ console_scripts =
     arctic_prune_versions = arctic.scripts.arctic_prune_versions:main
     arctic_fsck = arctic.scripts.arctic_fsck:main
 
-    
+
 [pycodestyle]
 ignore = E122,E126,E501,E731,W503,E722,W504
+
+[options]
+# TODO
+zip_safe = True
+include_package_data = True
+packages = find:
+install_requires =
+    decorator
+    enum-compat
+    mock
+    mockextras
+    pandas<=1.0.3
+    numpy<=1.18.4
+    pymongo>=3.6.0, <= 3.11.0
+    pytz
+    tzlocal
+    lz4
