--- a/setup.cfg
+++ b/setup.cfg
@@ -60,9 +60,9 @@ ignore = E122,E126,E501,E731,W503,E722,W504
 
 [options]
 # TODO
-zip_safe = True
-include_package_data = True
-packages = find:
+#zip_safe = True
+#include_package_data = True
+#packages = find:
 install_requires =
     decorator
     enum-compat
