tidy up cmdclass

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ license=GPL
 keywords=ahl, keyvalue, tickstore, mongo, timeseries
 url=https://github.com/man-group/arctic
 #long_description_content_type=text/markdown
-#cmdclass={test: PyTest}
+#cmdclass={'test': PyTest}
 classifiers =
     Development Status :: 5 - Production/Stable
     License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
@@ -59,10 +59,6 @@ console_scripts =
 ignore = E122,E126,E501,E731,W503,E722,W504
 
 [options]
-# TODO
-#zip_safe = True
-#include_package_data = True
-#packages = find:
 install_requires =
     decorator
     enum-compat
