--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name=arctic
-version=1.80.5
+version=1.80.5a
 author=Man AHL Technology
 author_email=ahl.de@man.com
 maintainer_email=ahl.de@man.com
@@ -8,14 +8,12 @@ description=Man AHL Versioned TimeSeries and TickStore
 license=GPL
 keywords=ahl, keyvalue, tickstore, mongo, timeseries
 url=https://github.com/man-group/arctic
-#long_description_content_type=text/markdown
-#cmdclass={'test': PyTest}
+#Development Status :: 4 - Beta
 classifiers =
     Development Status :: 5 - Production/Stable
     License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
     Programming Language :: Python :: Implementation :: CPython
     Operating System :: POSIX
     Operating System :: MacOS
