working fine windows

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name=arctic
-version=1.80.5a
+version=1.80.5b
 author=Man AHL Technology
 author_email=ahl.de@man.com
 maintainer_email=ahl.de@man.com
@@ -8,7 +8,6 @@ description=Man AHL Versioned TimeSeries and TickStore
 license=GPL
 keywords=ahl, keyvalue, tickstore, mongo, timeseries
 url=https://github.com/man-group/arctic
-#Development Status :: 4 - Beta
 classifiers =
     Development Status :: 5 - Production/Stable
     License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
