move setup sections into options

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,11 +92,9 @@ defaults: &defaults
          . ci/bin/activate
          ls -la /bin | grep mongo
          which mongod
-         #pytest --cov missing
          pip freeze
          #py.test -svvvvv --junitxml=test-results/junit.xml
-         #python setup.py test --pytest-args=-v
-         python setup.py test
+         python setup.py test --pytest-args=-v
     - store_test_results:
         path: test-results
     # Save artifacts
