--- a/setup.cfg
+++ b/setup.cfg
@@ -58,7 +58,7 @@ tests_require =
     mockextras
     pytest
     pytest-cov
-    pytest-server-fixtures
+    pytest-server-fixtures[mongodb]
     pytest-timeout
     pytest-xdist<=1.26.1
     tomli<2; python_version=='3.6'
