--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,15 @@ defaults: &defaults
             echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.2 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.2.list
             sudo apt-get update
             sudo ln -Tf /bin/true /usr/bin/systemctl
+            #new for ubuntu 22.04
+            echo "deb http://security.ubuntu.com/ubuntu focal-security main" | sudo tee /etc/apt/sources.list.d/focal-security.list
+            sudo apt-get update
+            sudo apt-get install libssl1.1
+            #end new
             sudo apt-get install -y mongodb-org=4.2.11 mongodb-org-server=4.2.11 mongodb-org-shell=4.2.11 mongodb-org-mongos=4.2.11 mongodb-org-tools=4.2.11
             sudo rm /usr/bin/systemctl
+            # new tidy 
+            sudo rm /etc/apt/sources.list.d/focal-security.list
     - run:
        name: Create and activate virtualenv
        command: |
