--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,22 +35,23 @@ defaults: &defaults
         command: |
             # run "cat /etc/os-release" to view information about the OS
             # good article on how to install mongo, https://docs.mongodb.com/manual/tutorial/install-mongodb-on-ubuntu/
+            # see notebooker
             cat /etc/os-release
             set -x
+            # ------ (2022-10-28) install libssl1.1 since mongo doesn't support Ubuntu 22.04 which has libssl v3 
+            echo "deb http://security.ubuntu.com/ubuntu focal-security main" | sudo tee /etc/apt/sources.list.d/focal-security.list
+            sudo apt-get update
+            sudo apt-get install libssl1.1
+            # -------
             wget -qO - https://www.mongodb.org/static/pgp/server-4.2.asc | sudo apt-key add -
             sudo apt-get install gnupg
             wget -qO - https://www.mongodb.org/static/pgp/server-4.2.asc | sudo apt-key add -
             echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.2 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.2.list
             sudo apt-get update
             sudo ln -Tf /bin/true /usr/bin/systemctl
-            #new for ubuntu 22.04
-            echo "deb http://security.ubuntu.com/ubuntu focal-security main" | sudo tee /etc/apt/sources.list.d/focal-security.list
-            sudo apt-get update
-            sudo apt-get install libssl1.1
-            #end new
             sudo apt-get install -y mongodb-org=4.2.11 mongodb-org-server=4.2.11 mongodb-org-shell=4.2.11 mongodb-org-mongos=4.2.11 mongodb-org-tools=4.2.11
             sudo rm /usr/bin/systemctl
-            # new tidy 
+
             sudo rm /etc/apt/sources.list.d/focal-security.list
     - run:
        name: Create and activate virtualenv
