add mongo 4.4 support (#982)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ defaults: &defaults
         command: |
           echo $VERSION > "$CIRCLE_ARTIFACTS/version.txt"
     - run:
-        name: Install MongoDB 4.2
+        name: Install MongoDB 4.4
         command: |
             # run "cat /etc/os-release" to view information about the OS
             # good article on how to install mongo, https://docs.mongodb.com/manual/tutorial/install-mongodb-on-ubuntu/
@@ -35,13 +35,13 @@ defaults: &defaults
             sudo apt-get update
             sudo apt-get install libssl1.1
             # -------
-            wget -qO - https://www.mongodb.org/static/pgp/server-4.2.asc | sudo apt-key add -
+            wget -qO - https://www.mongodb.org/static/pgp/server-4.4.asc | sudo apt-key add -
             sudo apt-get install gnupg
-            wget -qO - https://www.mongodb.org/static/pgp/server-4.2.asc | sudo apt-key add -
-            echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.2 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.2.list
+            wget -qO - https://www.mongodb.org/static/pgp/server-4.4.asc | sudo apt-key add -
+            echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.4 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.4.list
             sudo apt-get update
             sudo ln -Tf /bin/true /usr/bin/systemctl
-            sudo apt-get install -y mongodb-org=4.2.11 mongodb-org-server=4.2.11 mongodb-org-shell=4.2.11 mongodb-org-mongos=4.2.11 mongodb-org-tools=4.2.11
+            sudo apt-get install -y mongodb-org=4.4.18 mongodb-org-server=4.4.18 mongodb-org-shell=4.4.18 mongodb-org-mongos=4.4.18 mongodb-org-tools=4.4.18
             sudo rm /usr/bin/systemctl
 
             sudo rm /etc/apt/sources.list.d/focal-security.list
@@ -105,6 +105,8 @@ jobs:
     docker:
     - image: cimg/python:3.6-node
     <<: *defaults
+    # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
+    #resource_class: large
   build_3_7:
     environment:
       PYTHON_VERSION: "3_7"
@@ -116,6 +118,7 @@ jobs:
     docker:
     - image: cimg/python:3.7-node
     <<: *defaults
+    resource_class: large
   build_3_8:
     environment:
       PYTHON_VERSION: "3_8"
@@ -127,6 +130,7 @@ jobs:
     docker:
     - image: cimg/python:3.8-node
     <<: *defaults
+    resource_class: large
   publish-github-release:
    docker:
      - image: cibuilds/github:0.13
